<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:theme="@style/ReflexTheme"
    tools:context=".activities.MenuActivity">

    <RelativeLayout
        android:id="@+id/title_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="84dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="5dp"
            android:autoSizeTextType="uniform"
            android:maxLines="1"
            android:text="@string/title"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

        <ImageButton
            android:id="@+id/polish_lang_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/title"
            android:layout_marginStart="3dp"
            android:background="@drawable/flag_pl"
            android:contentDescription="@string/lang_pl"
            android:onClick="changeLanguage" />

        <ImageButton
            android:id="@+id/english_lang_button"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_below="@id/title"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="3dp"
            android:background="@drawable/flag_en"
            android:contentDescription="@string/lang_en"
            android:onClick="changeLanguage" />

    </RelativeLayout>

    <Button
        android:id="@+id/play_button"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_centerInParent="true"
        android:background="@drawable/round_button"
        android:onClick="startGame"
        android:text="@string/play"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
        android:textColor="@android:color/white"
        android:textSize="32sp" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/authors"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/authors"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/authors_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/authors"
            android:background="@drawable/round_corners"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </RelativeLayout>

</RelativeLayout>