<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ResultActivity">


    <RelativeLayout
        android:id="@+id/highscore_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp">

        <TextView
            android:id="@+id/label_highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp"
            android:text="@string/highscore"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/highscore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_highscore"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_corners"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="11pt" />
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/highscore_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp">

        <TextView
            android:id="@+id/label_score_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="3dp"
            android:text="@string/score"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="14pt" />

        <TextView
            android:id="@+id/score_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_score_result"
            android:layout_centerHorizontal="true"
            android:background="@drawable/round_corners"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@android:color/white"
            android:textSize="18pt" />
    </RelativeLayout>

    <Button
        android:id="@+id/try_again_button"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@id/exit_menu_button"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="75dp"
        android:background="@drawable/round_button"
        android:onClick="onClickTryAgain"
        android:text="@string/try_again"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="12pt" />

    <Button
        android:id="@+id/exit_menu_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        android:background="@drawable/round_corners"
        android:onClick="onClickExitToMenu"
        android:text="@string/exit_menu"
        android:textAlignment="center"
        android:textAllCaps="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@android:color/white"
        android:textSize="10pt" />

</RelativeLayout>